--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "private": true,
   "homepage": "",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@ionic/react": "^8.2.5",
+    "@mui/material": "^5.16.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.0.3",
+    "react-toastify": "^10.0.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
