--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@babel/runtime": "^7.24.8",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -15,12 +16,16 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.4.3",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.0.3",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
