--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- 
+  "homepage":"https://xerox563.github.io/react-ecommerce-store",
   "name": "react-ecommerce-store",
   "version": "0.1.0",
   "private": true,
@@ -31,9 +31,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
+
 
   },
   "eslintConfig": {
